Show style in promotions list

--- a/app/views/promotions/_promotion.html.erb
+++ b/app/views/promotions/_promotion.html.erb
@@ -1,8 +1,10 @@
 <tr>
-   <td class="promotion">
-      <span class="rank"><%= promotion.rank %></span>
+   <td class="promotion" valign="top">
+      <span class="rank_heading"><%= promotion.rank %></span>
+      <br />
+      <span class="style_subheading"><%= promotion.style.name %></span>
    </td>
-   <td>
+   <td valign="top">
       <span class="timestamp">
        <%= promotion.promotion_date %> 
       </span>
