--- a/public/stylesheets/sport_journal.css
+++ b/public/stylesheets/sport_journal.css
@@ -39,9 +39,15 @@ body {
    font-size: 12px;
 }   
 
-.rank {
+.rank_heading {
    width: 250px;
    color: #0000ff;
+}
+
+.style_subheading  {
+   width: 250px;
+   color: #b0b0b0;
+   font-size: 10px;
 }
 
 .martial_arts_style {
