--- a/public/stylesheets/sport_journal.css
+++ b/public/stylesheets/sport_journal.css
@@ -164,3 +164,10 @@ body {
 	font-size:80%;
 	color:#333;
 }
+
+.css1 { font-size: 1.0em; }
+.css2 { font-size: 1.3em; }
+.css3 { font-size: 1.6em; }
+.css4 { font-size: 1.9em; }
+.css5 { font-size: 2.2em; }
+.css6 { font-size: 2.5em; }
