--- a/app/views/technique_repetitions/_technique_repetition.html.erb
+++ b/app/views/technique_repetitions/_technique_repetition.html.erb
@@ -1,6 +1,3 @@
 <div class="technique_repetition_name">
-   <%= technique_repetition.technique.name %>
-</div>
-<div class="technique_repetition_count">
-   <%= technique_repetition.repetitions %>
+   <%= pluralize(technique_repetition.repetitions, technique_repetition.technique.name) %>
 </div>
