--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,4 +1,3 @@
-<h1>Tags#show</h1>
-<p>Find me in app/views/tags/show.html.erb</p>
+<h1>Items tagged <i><%= @tag %></i></h1>
 
 <%= render @workout_sessions %>
