--- a/public/stylesheets/sport_journal.css
+++ b/public/stylesheets/sport_journal.css
@@ -157,3 +157,13 @@ body {
 .tagcloud4 { font-size: 1.9em; color: #707070; }
 .tagcloud5 { font-size: 2.2em; color: #505050; }
 .tagcloud6 { font-size: 2.5em; color: #303030; }
+
+
+.tags {
+   background-color:#ddd;
+   margin: 2px;
+}
+.tag {
+   padding-left: 2px;
+   padding-right: 2px;
+}
