--- a/public/stylesheets/sport_journal.css
+++ b/public/stylesheets/sport_journal.css
@@ -158,11 +158,20 @@ body {
 .tagcloud5 { font-size: 2.2em; color: #fff; background-color:#0000dd; }
 .tagcloud6 { font-size: 2.5em; color: #fff; background-color:#0000ff;  }
 
-.tags {
-   background-color:#ddd;
-   margin: 2px;
+.tag_list {
+	background-color:#f0f0f0;
+	margin: 2px;
+	width: auto;
+	min-width: 0;
+	display:table;
+	font-size: 10px;
 }
 .tag {
-   padding-left: 2px;
-   padding-right: 2px;
+	background-color:#ddd;
+	padding-left: 2px;
+	padding-right: 2px;
+	margin-top: 4px;
+	margin-bottom: 4px;
+	margin-left: 4px;
+	margin-right: 4px;
 }
