--- a/public/stylesheets/sport_journal.css
+++ b/public/stylesheets/sport_journal.css
@@ -158,6 +158,11 @@ body {
 .tagcloud5 { font-size: 2.2em; color: #fff; background-color:#0000dd; }
 .tagcloud6 { font-size: 2.5em; color: #fff; background-color:#0000ff;  }
 
+ul.tag_list {
+	margin: 0;
+	padding: 0;
+}
+
 .tag_list {
 	background-color:#f0f0f0;
 	margin: 2px;
@@ -166,6 +171,31 @@ body {
 	display:table;
 	font-size: 10px;
 }
+
+.tag_list_label li {
+	list-style-type:none;
+	display:inline;
+}
+
+.tag_list li {
+	list-style-type:none;
+	display:inline;
+}
+
+.tag_list li a
+{
+	float: left;
+	display: block;
+	padding: 3px 10px;
+	background: #016fac url(bg-topnav.jpg) repeat-x;
+	margin: 0 1px 0 0;
+	text-align: center;
+	text-decoration: none;
+	color: #fff;
+	margin-left: 4px;
+	margin-right: 4px;
+}
+
 .tag {
 	background-color:#ddd;
 	padding-left: 2px;
@@ -174,4 +204,19 @@ body {
 	margin-bottom: 4px;
 	margin-left: 4px;
 	margin-right: 4px;
+}
+
+.tag a  {
+	display: block;
+	border: 1px solid;
+	border-color: #aaa #000 #000 #aaa;
+	width: 8em;
+	background: #fc0;
+}
+
+.tag a:hover {
+	position: relative;
+	top: 1px;
+	left: 1px;
+	border-color: #000 #aaa #aaa #000;
 }
