--- a/public/stylesheets/sport_journal.css
+++ b/public/stylesheets/sport_journal.css
@@ -90,15 +90,6 @@ body {
    background-color: #e9e9e9;
 }
 
-.tagcloud {
-   margin: 20px;
-   padding: 3px;
-   border-style: dotted;
-   border-width:1px;
-   width: 250px;
-   background-color: #ffc;
-}
-
 
 .small { font-size: 10px; }
 .medium { font-size: 12px; }
@@ -151,13 +142,6 @@ body {
 	color:#333;
 }
 
-.tagcloud1 { font-size: 1.0em; color: #fff; background-color:#000055; }
-.tagcloud2 { font-size: 1.3em; color: #fff; background-color:#000077; }
-.tagcloud3 { font-size: 1.6em; color: #fff; background-color:#000099; }
-.tagcloud4 { font-size: 1.9em; color: #fff; background-color:#0000bb; }
-.tagcloud5 { font-size: 2.2em; color: #fff; background-color:#0000dd; }
-.tagcloud6 { font-size: 2.5em; color: #fff; background-color:#0000ff;  }
-
 ul.tag_list {
 	margin: 0;
 	padding: 0;
@@ -172,18 +156,13 @@ ul.tag_list {
 	font-size: 10px;
 }
 
-.tag_list_label li {
-	list-style-type:none;
-	display:inline;
-}
 
 .tag_list li {
 	list-style-type:none;
 	display:inline;
 }
 
-.tag_list li a
-{
+.tag_list li a {
 	float: left;
 	display: block;
 	padding: 3px 10px;
@@ -196,7 +175,7 @@ ul.tag_list {
 	margin-right: 4px;
 }
 
-.tag {
+.tag_list {
 	background-color:#ddd;
 	padding-left: 2px;
 	padding-right: 2px;
@@ -206,7 +185,7 @@ ul.tag_list {
 	margin-right: 4px;
 }
 
-.tag a  {
+.tag_list a  {
 	display: block;
 	border: 1px solid;
 	border-color: #aaa #000 #000 #aaa;
@@ -214,9 +193,60 @@ ul.tag_list {
 	background: #fc0;
 }
 
-.tag a:hover {
+.tag_list a:hover {
 	position: relative;
 	top: 1px;
 	left: 1px;
 	border-color: #000 #aaa #aaa #000;
 }
+
+.tagcloud {
+	margin: 20px;
+	padding: 3px;
+	border-width:1px;
+	background-color: #ffc;
+
+	margin: 2px;
+	width: auto;
+	min-width: 0;
+	display:table;
+	font-size: 10px;
+}
+
+.tagcloud li {
+	list-style-type:none;
+	display:inline;
+	padding: 3px;
+	margin: 2px;
+}
+
+
+.tagcloud_tag a {
+	text-decoration: none;
+	color: #fff;
+}
+
+.tagcloud_tag {
+	float: left;
+	display: block;
+	margin: 0 1px 0 0;
+	text-align: center;
+	text-decoration: none;
+	color: #fff;
+	
+}
+
+.tagcloud_tag a:hover {
+	position: relative;
+	top: 1px;
+	left: 1px;
+	border-color: #000 #aaa #aaa #000;
+}
+
+.tagcloud1 { font-size: 1.0em; color: #fff; background-color:#000055; }
+.tagcloud2 { font-size: 1.3em; color: #fff; background-color:#000077; }
+.tagcloud3 { font-size: 1.6em; color: #fff; background-color:#000099; }
+.tagcloud4 { font-size: 1.9em; color: #fff; background-color:#0000bb; }
+.tagcloud5 { font-size: 2.2em; color: #fff; background-color:#0000dd; }
+.tagcloud6 { font-size: 2.5em; color: #fff; background-color:#0000ff; }
+
